import { readFileSync } from 'node:fs';
import { join } from 'node:path';
import {
  upgradeMusicIndex,
  CURRENT_MUSIC_INDEX_VERSION,
} from 'frontend/logic/music/music-index-upgraders';

/**
 * These tests verify that in-memory upgraders correctly normalize old serialized
 * MusicIndex formats. Upgraders are write-once: if a test here breaks, something
 * has gone wrong — do not update the upgrader, investigate why the fixture changed.
 *
 * Snapshot testing is the primary assertion: the snapshot is the ground truth for
 * what a correctly upgraded index looks like.
 *
 * One describe block per version step. Future upgraders add a new block below;
 * existing blocks are never modified.
 */

// v1 → current: genre field added in v2, track number added in v3
describe('upgradeMusicIndex v1 → current', () => {
  const v1Fixture = JSON.parse(
    readFileSync(join(__dirname, 'fixtures/music-index-v1.json'), 'utf-8'),
  );

  it('upgrades a v1 index to current', () => {
    const { index, wasUpgraded } = upgradeMusicIndex(v1Fixture);
    expect(wasUpgraded).toBe(true);
    expect(index).toMatchSnapshot();
  });

  it('sets version to current', () => {
    const { index } = upgradeMusicIndex(v1Fixture);
    expect(index.version).toBe(CURRENT_MUSIC_INDEX_VERSION);
  });

  it('backfills genre as null on all tracks', () => {
    const { index } = upgradeMusicIndex(v1Fixture);
    for (const track of index.tracks) {
      expect(track.genre).toBeNull();
    }
  });

  it('backfills track as null on all tracks', () => {
    const { index } = upgradeMusicIndex(v1Fixture);
    for (const track of index.tracks) {
      expect(track.track).toBeNull();
    }
  });

  it('preserves all other track fields', () => {
    const { index } = upgradeMusicIndex(v1Fixture);
    const track = index.tracks[0];
    expect(track.path).toBe('/Artist/Album/track.mp3');
    expect(track.title).toBe('Test Track');
    expect(track.artist).toBe('Test Artist');
    expect(track.album).toBe('Test Album');
    expect(track.duration).toBe(180.5);
    expect(track.size).toBe(3145728);
  });

  it('preserves null fields', () => {
    const { index } = upgradeMusicIndex(v1Fixture);
    const track = index.tracks[1];
    expect(track.title).toBeNull();
    expect(track.artist).toBeNull();
    expect(track.album).toBeNull();
    expect(track.duration).toBeNull();
  });
});

// v2 → current: track number field added (backfilled as null on upgrade)
describe('upgradeMusicIndex v2 → current', () => {
  const v2Fixture = JSON.parse(
    readFileSync(join(__dirname, 'fixtures/music-index-v2.json'), 'utf-8'),
  );

  it('upgrades a v2 index to current', () => {
    const { index, wasUpgraded } = upgradeMusicIndex(v2Fixture);
    expect(wasUpgraded).toBe(true);
    expect(index).toMatchSnapshot();
  });

  it('sets version to current', () => {
    const { index } = upgradeMusicIndex(v2Fixture);
    expect(index.version).toBe(CURRENT_MUSIC_INDEX_VERSION);
  });

  it('backfills track as null on all tracks', () => {
    const { index } = upgradeMusicIndex(v2Fixture);
    for (const track of index.tracks) {
      expect(track.track).toBeNull();
    }
  });

  it('preserves all other track fields', () => {
    const { index } = upgradeMusicIndex(v2Fixture);
    const track = index.tracks[0];
    expect(track.path).toBe('/Artist/Album/track.mp3');
    expect(track.title).toBe('Test Track');
    expect(track.artist).toBe('Test Artist');
    expect(track.album).toBe('Test Album');
    expect(track.genre).toBe('Rock');
    expect(track.duration).toBe(180.5);
    expect(track.size).toBe(3145728);
  });

  it('preserves null fields', () => {
    const { index } = upgradeMusicIndex(v2Fixture);
    const track = index.tracks[1];
    expect(track.title).toBeNull();
    expect(track.artist).toBeNull();
    expect(track.album).toBeNull();
    expect(track.genre).toBeNull();
    expect(track.duration).toBeNull();
  });

  it('returns wasUpgraded: false for a current index', () => {
    const current: unknown = {
      version: CURRENT_MUSIC_INDEX_VERSION,
      scannedAt: '2025-01-01T00:00:00.000Z',
      tracks: [],
    };
    const { wasUpgraded } = upgradeMusicIndex(current);
    expect(wasUpgraded).toBe(false);
  });
});

// v4 → current: hasEmbeddedArt field added (backfilled as false on upgrade)
describe('upgradeMusicIndex v4 → current', () => {
  const v4Fixture = JSON.parse(
    readFileSync(join(__dirname, 'fixtures/music-index-v4.json'), 'utf-8'),
  );

  it('upgrades a v4 index to current', () => {
    const { index, wasUpgraded } = upgradeMusicIndex(v4Fixture);
    expect(wasUpgraded).toBe(true);
    expect(index).toMatchSnapshot();
  });

  it('sets version to current', () => {
    const { index } = upgradeMusicIndex(v4Fixture);
    expect(index.version).toBe(CURRENT_MUSIC_INDEX_VERSION);
  });

  it('backfills hasEmbeddedArtwork as false on all tracks', () => {
    const { index } = upgradeMusicIndex(v4Fixture);
    for (const track of index.tracks) {
      expect(track.hasEmbeddedArtwork).toBe(false);
    }
  });

  it('preserves all other track fields', () => {
    const { index } = upgradeMusicIndex(v4Fixture);
    const track = index.tracks[0];
    expect(track.path).toBe('/Artist/Album/track.mp3');
    expect(track.title).toBe('Test Track');
    expect(track.artist).toBe('Test Artist');
    expect(track.album).toBe('Test Album');
    expect(track.genre).toBe('Rock');
    expect(track.track).toBe(1);
    expect(track.duration).toBe(180.5);
    expect(track.size).toBe(3145728);
    expect(track.folderArtworkPath).toBe('/Artist/Album/Folder.jpg');
  });

  it('preserves null fields', () => {
    const { index } = upgradeMusicIndex(v4Fixture);
    const track = index.tracks[1];
    expect(track.title).toBeNull();
    expect(track.artist).toBeNull();
    expect(track.album).toBeNull();
    expect(track.genre).toBeNull();
    expect(track.track).toBeNull();
    expect(track.duration).toBeNull();
    expect(track.folderArtworkPath).toBeNull();
  });
});

// v5 → current: albumArtist field added (backfilled as null on upgrade)
describe('upgradeMusicIndex v5 → current', () => {
  const v5Fixture = JSON.parse(
    readFileSync(join(__dirname, 'fixtures/music-index-v5.json'), 'utf-8'),
  );

  it('upgrades a v5 index to current', () => {
    const { index, wasUpgraded } = upgradeMusicIndex(v5Fixture);
    expect(wasUpgraded).toBe(true);
    expect(index).toMatchSnapshot();
  });

  it('sets version to current', () => {
    const { index } = upgradeMusicIndex(v5Fixture);
    expect(index.version).toBe(CURRENT_MUSIC_INDEX_VERSION);
  });

  it('backfills albumArtist as null on all tracks', () => {
    const { index } = upgradeMusicIndex(v5Fixture);
    for (const track of index.tracks) {
      expect(track.albumArtist).toBeNull();
    }
  });

  it('preserves all other track fields', () => {
    const { index } = upgradeMusicIndex(v5Fixture);
    const track = index.tracks[0];
    expect(track.path).toBe('/Artist/Album/track.mp3');
    expect(track.title).toBe('Test Track');
    expect(track.artist).toBe('Test Artist');
    expect(track.album).toBe('Test Album');
    expect(track.genre).toBe('Rock');
    expect(track.track).toBe(1);
    expect(track.duration).toBe(180.5);
    expect(track.size).toBe(3145728);
    expect(track.folderArtworkPath).toBe('/Artist/Album/Folder.jpg');
    expect(track.hasEmbeddedArtwork).toBe(false);
  });
});

// v6 → current: composer and preferComposerGrouping fields added.
describe('upgradeMusicIndex v6 → current', () => {
  const v6Fixture = JSON.parse(
    readFileSync(join(__dirname, 'fixtures/music-index-v6.json'), 'utf-8'),
  );

  it('upgrades a v6 index to current', () => {
    const { index, wasUpgraded } = upgradeMusicIndex(v6Fixture);
    expect(wasUpgraded).toBe(true);
    expect(index).toMatchSnapshot();
  });

  it('sets version to current', () => {
    const { index } = upgradeMusicIndex(v6Fixture);
    expect(index.version).toBe(CURRENT_MUSIC_INDEX_VERSION);
  });

  it('backfills composer and preferComposerGrouping on all tracks', () => {
    const { index } = upgradeMusicIndex(v6Fixture);
    for (const track of index.tracks) {
      expect(track.composer).toBeNull();
      expect(track.preferComposerGrouping).toBeNull();
    }
  });

  it('preserves all other track fields', () => {
    const { index } = upgradeMusicIndex(v6Fixture);
    const track = index.tracks[0];
    expect(track.path).toBe('/Artist/Album/track.mp3');
    expect(track.title).toBe('Test Track');
    expect(track.artist).toBe('Test Artist');
    expect(track.albumArtist).toBe('Test Album Artist');
    expect(track.album).toBe('Test Album');
    expect(track.genre).toBe('Rock');
    expect(track.track).toBe(1);
    expect(track.duration).toBe(180.5);
    expect(track.size).toBe(3145728);
    expect(track.folderArtworkPath).toBe('/Artist/Album/Folder.jpg');
    expect(track.hasEmbeddedArtwork).toBe(false);
  });
});

// v3 → current: coverArt field added (backfilled as null on upgrade)
describe('upgradeMusicIndex v3 → current', () => {
  const v3Fixture = JSON.parse(
    readFileSync(join(__dirname, 'fixtures/music-index-v3.json'), 'utf-8'),
  );

  it('upgrades a v3 index to current', () => {
    const { index, wasUpgraded } = upgradeMusicIndex(v3Fixture);
    expect(wasUpgraded).toBe(true);
    expect(index).toMatchSnapshot();
  });

  it('sets version to current', () => {
    const { index } = upgradeMusicIndex(v3Fixture);
    expect(index.version).toBe(CURRENT_MUSIC_INDEX_VERSION);
  });

  it('backfills folderArtworkPath as null on all tracks', () => {
    const { index } = upgradeMusicIndex(v3Fixture);
    for (const track of index.tracks) {
      expect(track.folderArtworkPath).toBeNull();
    }
  });

  it('preserves all other track fields', () => {
    const { index } = upgradeMusicIndex(v3Fixture);
    const track = index.tracks[0];
    expect(track.path).toBe('/Artist/Album/track.mp3');
    expect(track.title).toBe('Test Track');
    expect(track.artist).toBe('Test Artist');
    expect(track.album).toBe('Test Album');
    expect(track.genre).toBe('Rock');
    expect(track.track).toBe(1);
    expect(track.duration).toBe(180.5);
    expect(track.size).toBe(3145728);
  });

  it('preserves null fields', () => {
    const { index } = upgradeMusicIndex(v3Fixture);
    const track = index.tracks[1];
    expect(track.title).toBeNull();
    expect(track.artist).toBeNull();
    expect(track.album).toBeNull();
    expect(track.genre).toBeNull();
    expect(track.track).toBeNull();
    expect(track.duration).toBeNull();
  });
});

// v7 → current: no schema change. The server changed how text fields are
// resolved when a file has more than one ID3 tag source (prefer ID3v2.3),
// so a v7 index may hold values computed the old way — this bump exists
// purely to force a rescan, not to backfill any field.
describe('upgradeMusicIndex v7 → current', () => {
  const v7Fixture = JSON.parse(
    readFileSync(join(__dirname, 'fixtures/music-index-v7.json'), 'utf-8'),
  );

  it('upgrades a v7 index to current', () => {
    const { index, wasUpgraded } = upgradeMusicIndex(v7Fixture);
    expect(wasUpgraded).toBe(true);
    expect(index).toMatchSnapshot();
  });

  it('sets version to current', () => {
    const { index } = upgradeMusicIndex(v7Fixture);
    expect(index.version).toBe(CURRENT_MUSIC_INDEX_VERSION);
  });

  it('preserves every track field unchanged', () => {
    const { index } = upgradeMusicIndex(v7Fixture);
    const track = index.tracks[0];
    expect(track.path).toBe('/Artist/Album/track.mp3');
    expect(track.title).toBe('Test Track');
    expect(track.artist).toBe('Test Artist');
    expect(track.albumArtist).toBe('Test Album Artist');
    expect(track.composer).toBe('Test Composer');
    expect(track.album).toBe('Test Album');
    expect(track.genre).toBe('Rock');
    expect(track.preferComposerGrouping).toBeNull();
    expect(track.track).toBe(1);
    expect(track.duration).toBe(180.5);
    expect(track.size).toBe(3145728);
    expect(track.folderArtworkPath).toBe('/Artist/Album/Folder.jpg');
    expect(track.hasEmbeddedArtwork).toBe(false);
  });

  it('preserves null fields', () => {
    const { index } = upgradeMusicIndex(v7Fixture);
    const track = index.tracks[1];
    expect(track.title).toBeNull();
    expect(track.artist).toBeNull();
    expect(track.albumArtist).toBeNull();
    expect(track.composer).toBeNull();
    expect(track.album).toBeNull();
    expect(track.genre).toBeNull();
    expect(track.preferComposerGrouping).toBeNull();
    expect(track.track).toBeNull();
    expect(track.duration).toBeNull();
  });
});

// v8 → current: pure rename of the artwork fields — coverArt →
// folderArtworkPath and hasEmbeddedArt → hasEmbeddedArtwork. No values change.
describe('upgradeMusicIndex v8 → current', () => {
  const v8Fixture = JSON.parse(
    readFileSync(join(__dirname, 'fixtures/music-index-v8.json'), 'utf-8'),
  );

  it('upgrades a v8 index to current', () => {
    const { index, wasUpgraded } = upgradeMusicIndex(v8Fixture);
    expect(wasUpgraded).toBe(true);
    expect(index).toMatchSnapshot();
  });

  it('sets version to current', () => {
    const { index } = upgradeMusicIndex(v8Fixture);
    expect(index.version).toBe(CURRENT_MUSIC_INDEX_VERSION);
  });

  it('renames coverArt to folderArtworkPath, preserving the value', () => {
    const { index } = upgradeMusicIndex(v8Fixture);
    expect(index.tracks[0].folderArtworkPath).toBe('/Artist/Album/Folder.jpg');
    expect(index.tracks[1].folderArtworkPath).toBeNull();
    for (const track of index.tracks) {
      expect('coverArt' in track).toBe(false);
    }
  });

  it('renames hasEmbeddedArt to hasEmbeddedArtwork, preserving the value', () => {
    const { index } = upgradeMusicIndex(v8Fixture);
    expect(index.tracks[0].hasEmbeddedArtwork).toBe(true);
    expect(index.tracks[1].hasEmbeddedArtwork).toBe(false);
    for (const track of index.tracks) {
      expect('hasEmbeddedArt' in track).toBe(false);
    }
  });

  it('preserves every other track field unchanged', () => {
    const { index } = upgradeMusicIndex(v8Fixture);
    const track = index.tracks[0];
    expect(track.path).toBe('/Artist/Album/track.mp3');
    expect(track.title).toBe('Test Track');
    expect(track.artist).toBe('Test Artist');
    expect(track.albumArtist).toBe('Test Album Artist');
    expect(track.composer).toBe('Test Composer');
    expect(track.album).toBe('Test Album');
    expect(track.genre).toBe('Rock');
    expect(track.preferComposerGrouping).toBeNull();
    expect(track.track).toBe(1);
    expect(track.duration).toBe(180.5);
    expect(track.size).toBe(3145728);
  });
});
